dev/deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: front-end
    spec:
      containers:
        - name: python-app
          image: ghcr.io/k8s-up/python-app:1.0.2
  replicas: 3
  selector:
    matchLabels:
      type: front-end
