dev/clusterip-service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: ClusterIP
  ports:
   - targetPort: 5000
     port: 5000

  selector:
     app: myapp
     type: front-end
